[package]
name = "quaff"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlformat = "0.3.5"
sqlparser = { version = "0.56.0", features = ["serde", "serde_json"] }
thiserror = "2.0.12"
toml = "0.8.22"
walkdir = "2.5.0"
